# mrchem

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  config.h.in  setup
api/: CMakeLists.txt  QMFunctions
cmake/: MRChemConfig.cmake.in  autocmake.yml
cmake/custom/: main.cmake
doc/: index.rst
doc/users/: schema_input.json  user_inp.rst  user_ref.rst
mrchem/input_parser/: README.md  __init__.py
mrchem/input_parser/plumbing/: lexer.py
pilot/: CMakeLists.txt  mrchem.cpp  mrchem.in  mrchem.inp  template.yml
python/: template.yml
python/mrchem/: CUBEparser.py  api.py  helpers.py  validators.py
python/mrchem/input_parser/: README.md  __init__.py  api.py  cli.py
src/: CMakeLists.txt  SCFDriver.cpp  SCFDriver.h  driver.cpp  mrchem.in  mrenv.cpp  parallel.cpp  parallel.h
src/analyticfunctions/: IdentityCorrelationFunction.h  NuclearCorrelationFunction.h  NuclearFunction.h  SeeligCorrelationFunction.h  SlaterCorrelationFunction.h
src/chemistry/: CMakeLists.txt  Cavity.cpp  Cavity.h  Element.h  Molecule.cpp  Molecule.h  PeriodicTable.cpp  Permittivity.cpp  Permittivity.h  chemistry_utils.cpp
src/environment/: CMakeLists.txt  Cavity.h  DHScreening.cpp  DHScreening.h  SCRF.cpp  SCRF.h
src/initial_guess/: core.cpp  cube.cpp  sad.cpp
src/input/: mrchem.in  template.yml
src/mrchem/: CMakeLists.txt  MREnv.cpp  SCFDriver.cpp  SCFDriver.h  mrchem.in  parallel.h
src/mrchem/chemistry/: CMakeLists.txt  Element.h  Molecule.cpp  PeriodicTable.cpp
src/mrchem/initial_guess/: AOBasis.cpp  AOBasis.h  AOContraction.cpp  AOContraction.h  CMakeLists.txt  Intgrl.cpp  Intgrl.h  OrbitalExp.cpp  OrbitalExp.h
src/mrchem/properties/: DipoleMoment.h  HyperFineCoupling.h  Magnetizability.h  NMRShielding.h  SCFEnergy.h  SpinSpinCoupling.h
src/mrchem/qmfunctions/: CMakeLists.txt  Density.cpp  Density.h  DensityProjector.cpp  DensityProjector.h  IdentityCorrelationFunction.h  NuclearCorrelationFunction.h  NuclearFunction.cpp  NuclearFunction.h  Orbital.cpp  Orbital.h  OrbitalAdder.cpp  OrbitalAdder.h  OrbitalMultiplier.cpp  OrbitalMultiplier.h  OrbitalProjector.cpp  OrbitalProjector.h  OrbitalVector.cpp  OrbitalVector.h  QMFunction.cpp  QMFunction.h  SeeligCorrelationFunction.h  SlaterCorrelationFunction.h
src/mrchem/qmoperators/: CoreHamiltonian.h  CoulombOperator.h  CoulombPotential.cpp  CoulombPotential.h  DFT.h  ExchangeOperator.h  ExchangePotential.cpp  ExchangePotential.h  FockOperator.cpp  FockOperator.h  Hartree.h  HartreeFock.h  IdentityOperator.cpp  IdentityOperator.h  KineticOperator.cpp  KineticOperator.h  NuclearCorrelationOperator.h  QMOperator.cpp  QMOperator.h  QMOperatorExp.cpp  QMOperatorExp.h  QMTensorOperator.h  RegularizedPotential.h  XCOperator.cpp  XCOperator.h  XCPotential.h
src/mrchem/scf_solver/: EnergyOptimizer.cpp  EnergyOptimizer.h  GroundStateSolver.cpp  GroundStateSolver.h  LinearResponseSolver.h  OrbitalOptimizer.cpp  OrbitalOptimizer.h  SCF.h
src/mrcpp/: MathUtils.cpp  Plot.cpp
src/mrcpp/mwbuilders/: ConvolutionCalculator.cpp  DerivativeCalculator.cpp
src/mrcpp/mwtrees/: FunctionNode.cpp  MWNode.cpp
src/mrdft/: Factory.h  Functional.h  MRDFT.cpp
src/properties/: HyperFineCoupling.h  SCFEnergy.h
src/qmfunctions/: CMakeLists.txt  Orbital.cpp  density_utils.cpp  density_utils.h  orbital_utils.cpp  qmfunctions.cpp  qmfunctions.h
src/qmoperators/: CMakeLists.txt  QMDerivative.cpp  QMDerivative.h  QMIdentity.cpp  QMIdentity.h  QMOperator.h  QMPotential.cpp  QMPotential.h  QMSpin.cpp  QMSpin.h  RankOneTensorOperator.cpp  RankOneTensorOperator.h  RankTwoTensorOperator.cpp  RankTwoTensorOperator.h  RankZeroTensorOperator.cpp  RankZeroTensorOperator.h  TensorOperator.h  qmoperator_utils.cpp  qmoperator_utils.h
src/qmoperators/one_electron/: AnalyticPotential.cpp  AnalyticPotential.h  AngularMomentumOperator.h  CMakeLists.txt  DeltaOperator.h  DistanceOperator.h  ElectricFieldOperator.h  H_BB_dia.h  H_BM_dia.h  H_B_dip.h  H_B_spin.h  H_E_dip.h  H_E_quad.h  H_MB_dia.h  H_M_fc.h  H_M_pso.h  IdentityOperator.cpp  IdentityOperator.h  KineticOperator.cpp  KineticOperator.h  MagneticFieldOperator.h  MomentumOperator.h  NablaOperator.h  NuclearCorrelationOperator.cpp  NuclearCorrelationOperator.h  NuclearGradientOperator.h  NuclearOperator.cpp  NuclearOperator.h  PositionOperator.h  QMDerivative.cpp  QMDerivative.h  QMIdentity.cpp  QMIdentity.h  QMPotential.cpp  QMPotential.h  QMSpin.cpp  QMSpin.h  RegularizedNuclearOperator.cpp  RegularizedNuclearOperator.h  SmoothedNuclearOperator.cpp  (+7 more)
src/qmoperators/two_electron/: CMakeLists.txt  CoulombOperator.h  CoulombPotential.cpp  CoulombPotential.h  CoulombPotentialD1.cpp  CoulombPotentialD1.h  CoulombPotentialD2.cpp  CoulombPotentialD2.h  ExchangeOperator.h  ExchangePotential.cpp  ExchangePotential.h  ExchangePotentialD1.h  ExchangePotentialD2.h  FockBuilder.cpp  FockBuilder.h  FockOperator.cpp  FockOperator.h  ReactionOperator.h  ReactionPotential.cpp  ReactionPotential.h  SCRF.cpp  SCRF.h  XCOperator.h  XCPotential.cpp  XCPotential.h
src/scf_solver/: Accelerator.cpp  EnergyOptimizer.cpp  GroundStateSolver.cpp  GroundStateSolver.h  HelmholtzVector.cpp  HelmholtzVector.h  KAIN.cpp  KAIN.h  LinearResponseSolver.cpp  OrbitalOptimizer.cpp  OrbitalOptimizer.h  SCFSolver.h
src/utils/: RRMaximizer.cpp  RRMaximizer.h
tests/: CMakeLists.txt  tester.py
tests/h_lpb/: h.inp
tests/h_lpb/reference/: h.json  h.out
tests/h_m_solv_pb/: CMakeLists.txt  h_m.inp  test
tests/h_m_solv_pb/reference/: h_m.json  h_m.out
tests/h_pb/: h.inp
tests/h_pb/reference/: h.json  h.out
tests/hf_grad_lda/reference/: hf.json  hf.out
tests/li_solv/: CMakeLists.txt  mrchem.inp  mrchem.json  test
tests/li_solv/reference/: mrchem.stdout
tests/li_solv_pb/: CMakeLists.txt  li.inp
tests/li_solv_pb/reference/: li.json  li.out
tests/li_solv_var/: CMakeLists.txt  mrchem.inp
tests/li_solv_var/reference/: mrchem.stdout
tests/qmoperators/: nuclear_operator.cpp  operator_composition.cpp
tests/solventeffect/: CMakeLists.txt  cavity_function.cpp  reaction_operator.cpp
(+2 files in other folders)
